Aanpassen van alle wegen tot afbeeldingen en scripts zodat alles samen kan werken in github

--- a/Portfolio-Mehmet-Schepens/HTML/home.html
+++ b/Portfolio-Mehmet-Schepens/HTML/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio-home</title>
-    <link rel="stylesheet" href="/CSS/home.css" />
+    <link rel="stylesheet" href="/Portfolio-Mehmet-Schepens/CSS/home.css" />
     <link rel="icon" href="/Pictures/PF.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap"
@@ -22,7 +22,7 @@
         </div>
         <div id="right-nav">
           <a href="/HTML/login.html"
-            ><img src="/Pictures/logout.png" id="logOut" alt="LogOut"
+            ><img src="/Portfolio-Mehmet-Schepens/Pictures/logout.png" id="logOut" alt="LogOut"
           /></a>
         </div>
       </div>
@@ -46,6 +46,6 @@
       </div>
     </main>
     <footer></footer>
-    <script src="/JS/home.js"></script>
+    <script src="/Portfolio-Mehmet-Schepens/JS/home.js"></script>
   </body>
 </html>
