--- a/Portfolio-Mehmet-Schepens/HTML/login.html
+++ b/Portfolio-Mehmet-Schepens/HTML/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Mehmet S.</title>
-    <link rel="stylesheet" href="/CSS/login.css">
+    <link rel="stylesheet" href="/Portfolio-Mehmet-Schepens/CSS/login.css">
     <link rel="icon" href="/Pictures/PF.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
 </head>
@@ -15,10 +15,10 @@
     <main>
         <div class="login-form">
         <form>
-            <a href="mailto:mehmet.schepens@student.ehb.be" onmouseover="PointerEvent"><img alt="help-icon" id="help-button" src="/Pictures/help.png"></a>
+            <a href="mailto:mehmet.schepens@student.ehb.be" onmouseover="PointerEvent"><img alt="help-icon" id="help-button" src="/Portfolio-Mehmet-Schepens/Pictures/help.png"></a>
 
             <div class="profile-icon">
-                <img id="p-i" src="/Pictures/profile-icon.png" alt="profil-icon">
+                <img id="p-i" src="/Portfolio-Mehmet-Schepens/Pictures/profile-icon.png" alt="profil-icon">
             </div>
             <label for="name">Username.</label><br>
             <input id="username" class="input" type="text" placeholder="Enter username..." name="name" required><br>
@@ -33,6 +33,6 @@
             Site made by<br>Mehmet Schepens
         </p1>
     </footer>
-    <script src="/JS/script.js"></script>
+    <script src="/Portfolio-Mehmet-Schepens/JS/script.js"></script>
 </body>
 </html>
