Poging tot het maken van een register screen waarbij men accounts kan aanmaken. Probleem ==> acount wordt opgeslagen maar laat ons niet inloggen.

--- a/Portfolio-Mehmet-Schepens/HTML/login.html
+++ b/Portfolio-Mehmet-Schepens/HTML/login.html
@@ -37,11 +37,11 @@
                         required><br>
                 </div>
 
-                <button id="login-button" type="submit" onmouseover="loginHover()" onmouseout="loginOut()">Sign in</button><br>
+                <button id="login-button" type="submit" onmouseover="loginHover()" onclick="saveData()" onmouseout="loginOut()">Sign in</button><br>
 
 
             </form>
-            <p>Don't have an account? <button id="register-button">Register.</button></p>
+            <p>Don't have an account? <a href="register.html">Register.</a></p>
         </div>
     </main>
     <footer>
