Login werkt nu vlot, er kunnen accounts aangemaakt worden en er kan ingelogd worden.

--- a/Portfolio-Mehmet-Schepens/HTML/home.html
+++ b/Portfolio-Mehmet-Schepens/HTML/home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio-home</title>
   <link rel="stylesheet" href="/Portfolio-Mehmet-Schepens/CSS/home.css" />
-  <link rel="icon" href="/Pictures/PF.png" type="image/png">
+  <link rel="icon" href="/Portfolio-Mehmet-Schepens/Pictures/PF.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet" />
 </head>
 
@@ -47,7 +47,7 @@
     </div>
     <div id="mid-container">
       <div id="notas">
-        <h1 id="note">Notes</h1>
+        <!-- <h1 id="note">Notes</h1> -->
         <textarea id="note-container" rows="10" placeholder="Voer hier je nota's"></textarea>
         <button id="buttonNota" onclick="addNote()">Opslaan</button>
       </div>
