--- a/Portfolio-Mehmet-Schepens/HTML/login.html
+++ b/Portfolio-Mehmet-Schepens/HTML/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Mehmet</title>
     <link rel="stylesheet" href="/Portfolio-Mehmet-Schepens/CSS/login.css">
-    <link rel="icon" href="/Pictures/PF.png" type="image/png">
+    <link rel="icon" href="/Portfolio-Mehmet-Schepens/Pictures/PF.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3376bc5c4d.js" crossorigin="anonymous"></script>
 </head>
@@ -37,7 +37,7 @@
                         required><br>
                 </div>
 
-                <button id="login-button" type="submit" onmouseover="loginHover()" onclick="saveData()" onmouseout="loginOut()">Sign in</button><br>
+                <button id="login-button" type="submit"  onmouseover="loginHover()" onmouseout="loginOut()" onclick="checkLogs()" >Sign in</button><br>
 
 
             </form>
