Opmaken van een note functie, deze kan aangemaakt worden en gewijzigd worden, maar niet verwijdert.

--- a/Portfolio-Mehmet-Schepens/HTML/home.html
+++ b/Portfolio-Mehmet-Schepens/HTML/home.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <audio id="audio" src="/Sound/Doewam.mp3"></audio>
   <header>
     <div id="navigation">
       <div id="left-nav">
@@ -47,9 +46,9 @@
     </div>
     <div id="mid-container">
       <div id="notas">
-        <!-- <h1 id="note">Notes</h1> -->
-        <textarea id="note-container" rows="10" placeholder="Voer hier je nota's"></textarea>
-        <button id="buttonNota" onclick="addNote()">Opslaan</button>
+        <div id="notes">
+          <button class="add_note" type="button">+</button>
+        </div>
       </div>
       <div id="calendar"></div>
     </div>
