wijzigen van het toevoegen knop

--- a/Portfolio-Mehmet-Schepens/HTML/home.html
+++ b/Portfolio-Mehmet-Schepens/HTML/home.html
@@ -47,7 +47,7 @@
     <div id="mid-container">
       <div id="notas">
         <div id="notes">
-          <button class="add_note" type="button">+</button>
+          <button class="add_note" type="button">+ Toevoegen</button>
         </div>
       </div>
       <div id="calendar"></div>
