Opzoeken van API + extra
invoegen van commentaar in home-code. Beginnen opzoeken van API voor fetch en aanpassen van

--- a/Portfolio-Mehmet-Schepens/HTML/home.html
+++ b/Portfolio-Mehmet-Schepens/HTML/home.html
@@ -25,8 +25,8 @@
         </div>
       </div>
       <div id="right-nav">
-        <a href="/Portfolio-Mehmet-Schepens/HTML/login.html"><img src="/Portfolio-Mehmet-Schepens/Pictures/logout.png" id="logOut"
-            alt="LogOut" /></a>
+        <a href="/Portfolio-Mehmet-Schepens/HTML/login.html"><img src="/Portfolio-Mehmet-Schepens/Pictures/logout.png"
+            id="logOut" alt="LogOut" /></a>
       </div>
     </div>
   </header>
@@ -51,6 +51,12 @@
         </div>
       </div>
       <div id="calendar"></div>
+      
+    </div>
+    <div class="low-mid-container">
+      <div class="picSearcher">
+        <h1>Zoek hier maar rustig free-to-use afbeeldingen <span style="font-size: 25px;">&#9786;</span></h1>
+      </div>
     </div>
   </main>
   <footer></footer>
