--- a/Portfolio-Mehmet-Schepens/HTML/home.html
+++ b/Portfolio-Mehmet-Schepens/HTML/home.html
@@ -33,33 +33,38 @@
   <main>
     <div id="head-container">
       <div id="headL-container">
-        <div id="container-calendar">
+        <!-- <div id="container-calendar">
           <h1>Calendar</h1>
-        </div>
+        </div> -->
         <div id="container-notes">
-          <h1>Notes</h1>
+          <h1>Notes.</h1>
         </div>
       </div>
-      <div id="headR-container">
+      <!-- <div id="headR-container">
         <h1>MAPS</h1>
-      </div>
+      </div> -->
     </div>
     <div id="mid-container">
       <div id="notas">
         <div id="notes">
-          <button class="add_note" type="button">+ Toevoegen</button>
+          <button class="add_note" type="button">+ Toevoegen.</button>
         </div>
       </div>
       <div id="calendar"></div>
-      
+
     </div>
+    <hr style="width: 95%; color: white; border-radius: 20%; margin-top: 20px;">
     <div class="low-mid-container">
       <div class="picSearcher">
-        <h1>Zoek hier maar rustig free-to-use afbeeldingen <span style="font-size: 25px;">&#9786;</span></h1>
+        <p>Free-to-use afbeeldingen generator <span style="font-size: 25px;">&#9786;</span>.</p>
+        <input type="text" placeholder="Afbeelding zoeken..." id="pictureSearcher">
+        <button id="picSearchBtn">Zoeken.</button>
       </div>
+      <div id="picOutput"></div>
     </div>
   </main>
   <footer></footer>
+  <script src="/Portfolio-Mehmet-Schepens/JS/homeAPI.js"></script>
   <script src="/Portfolio-Mehmet-Schepens/JS/home.js"></script>
 </body>
 
