Invoegen CSS animatie
Ik heb een CSS animatie toegevoegd, README aangepast en een SEF ingevoegd

--- a/Portfolio-Mehmet-Schepens/HTML/home.html
+++ b/Portfolio-Mehmet-Schepens/HTML/home.html
@@ -23,8 +23,13 @@
         <div id="nav-item">
           <h1 id="template-literal"></h1>
         </div>
+        <div class="squareAnimation"></div>
       </div>
-      <div id="right-nav">
+      <div id="right-nav">          
+        <div id="checkbox-container">                   
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox">Animatie</label>
+      </div>    
         <a href="/Portfolio-Mehmet-Schepens/HTML/login.html"><img src="/Portfolio-Mehmet-Schepens/Pictures/logout.png"
             id="logOut" alt="LogOut" /></a>
       </div>
@@ -33,16 +38,10 @@
   <main>
     <div id="head-container">
       <div id="headL-container">
-        <!-- <div id="container-calendar">
-          <h1>Calendar</h1>
-        </div> -->
         <div id="container-notes">
           <h1>Notes.</h1>
         </div>
       </div>
-      <!-- <div id="headR-container">
-        <h1>MAPS</h1>
-      </div> -->
     </div>
     <div id="mid-container">
       <div id="notas">
@@ -62,6 +61,11 @@
       </div>
       <div id="picOutput"></div>
     </div>
+    <div class="low2-mid-container">
+      <!-- <div class="squareAnimation"></div> -->
+    </div>
+    <hr style="width: 95%; color: white; border-radius: 20%; margin-top: 20px;">
+
   </main>
   <footer></footer>
   <script src="/Portfolio-Mehmet-Schepens/JS/homeAPI.js"></script>
