Probleem login-form
Oplossen van het login-form probleem. (Wou niet inloggen --> gefixt)

--- a/Portfolio-Mehmet-Schepens/HTML/login.html
+++ b/Portfolio-Mehmet-Schepens/HTML/login.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <div class="login-form">
-            <form>
+            <form id="login-form">
                 <a href="mailto:mehmet.schepens@student.ehb.be" onmouseover="PointerEvent"><img alt="help-icon"
                         id="help-button" src="/Portfolio-Mehmet-Schepens/Pictures/help.png"></a>
 
@@ -27,13 +27,13 @@
                 <label for="name">Username.</label><br>
                 <div id="username">
                     <i id="username-logo" class="fa-solid fa-user"></i>
-                    <input id="username2" class="input" type="text" placeholder="Enter username..." name="name"
+                    <input id="username2" class="input" type="text" placeholder="Enter username..." name="username2"
                         required><br>
                 </div>
                 <label for="password">Password.</label><br>
                 <div id="password">
                     <i id="password-logo" class="fa-solid fa-lock"></i>
-                    <input id="password2" class="input" type="password" placeholder="4-Digits." name="password"
+                    <input id="password2" class="input" type="password" placeholder="4-Digits." name="password2"
                         required><br>
                 </div>
 
